fix whitespace nowrap in changelog styles

--- a/css/changelog.styl
+++ b/css/changelog.styl
@@ -157,7 +157,7 @@
     border-radius: 2px;
     position relative
     top -1px
-    white-space no-wrap
+    white-space nowrap
 
   .announce
     padding: 2px 6px;
